Implement basic Material UI

--- a/src/components/layout/PageNav/PageNav.module.scss
+++ b/src/components/layout/PageNav/PageNav.module.scss
@@ -1,5 +1,8 @@
 .component { 
-    a {
-        padding: 0 10px 0 0;
-    }
+    padding: 0;
+    margin-left: auto;
+}
+
+.link {
+    color: inherit;
 }
