--- a/src/components/views/Login/Login.module.scss
+++ b/src/components/views/Login/Login.module.scss
@@ -1,5 +1,24 @@
 @import '../../../styles/settings.scss';
 
-.component {
-    padding: $base-size;
+.root {
+    padding: 4px;
+    margin-top: $base-size;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    overflow: hidden;
+    background-color: $primary-color;
+
+    .myBox {
+        margin: $base-size;
+        text-align: center;
+        label {
+            padding: $base-size;
+        }
+        .buttonSubmit {
+            color: $primary-color;
+            border-color: $primary-color;
+            margin: .5 * $base-size;
+        }
+    }
 }
