Correct errors and set db for Waiter tab

--- a/src/components/views/Login/Login.module.scss
+++ b/src/components/views/Login/Login.module.scss
@@ -5,7 +5,7 @@
     margin-top: $base-size;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     overflow: hidden;
     background-color: $primary-color;
 
